<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014 The Android Open Source Project
    modified
    SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_screen_correction"
    android:key="screen_correction">

    <PreferenceScreen
        android:fragment="org.dslul.openboard.inputmethod.latin.settings.UserDictionaryListFragment"
        android:key="edit_personal_dictionary"
        android:title="@string/edit_personal_dictionary">
        <intent android:action="android.settings.USER_DICTIONARY_SETTINGS" />
    </PreferenceScreen>

    <PreferenceCategory
        android:title="@string/settings_category_correction">

        <SwitchPreferenceCompat
            android:key="pref_key_block_potentially_offensive"
            android:title="@string/prefs_block_potentially_offensive_title"
            android:summary="@string/prefs_block_potentially_offensive_summary"
            android:defaultValue="@bool/config_block_potentially_offensive"
            android:persistent="true" />

        <SwitchPreferenceCompat
            android:key="pref_key_auto_correction"
            android:title="@string/autocorrect"
            android:summary="@string/auto_correction_summary"
            android:defaultValue="true"
            android:persistent="true" />

        <ListPreference
            android:key="pref_key_auto_correction_confidence"
            android:title="@string/auto_correction_confidence"
            android:summary="%s"
            android:entries="@array/auto_correction_threshold_modes"
            android:entryValues="@array/auto_correction_threshold_mode_indexes"
            android:defaultValue="@string/auto_correction_threshold_mode_index_modest" />

        <SwitchPreferenceCompat
            android:key="auto_cap"
            android:title="@string/auto_cap"
            android:summary="@string/auto_cap_summary"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreferenceCompat
            android:key="pref_key_use_double_space_period"
            android:title="@string/use_double_space_period"
            android:summary="@string/use_double_space_period_summary"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreferenceCompat
            android:key="pref_autospace_after_punctuation"
            android:title="@string/autospace_after_punctuation"
            android:summary="@string/autospace_after_punctuation_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_suggestions">

        <SwitchPreferenceCompat
            android:key="show_suggestions"
            android:summary="@string/prefs_show_suggestions_summary"
            android:title="@string/prefs_show_suggestions"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreferenceCompat
            android:key="pref_key_use_personalized_dicts"
            android:title="@string/use_personalized_dicts"
            android:summary="@string/use_personalized_dicts_summary"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreferenceCompat
            android:key="next_word_prediction"
            android:title="@string/bigram_prediction"
            android:summary="@string/bigram_prediction_summary"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreferenceCompat
            android:key="pref_spellcheck_use_contacts"
            android:title="@string/use_contacts_dict"
            android:summary="@string/use_contacts_dict_summary"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreferenceCompat
            android:key="pref_add_to_personal_dictionary"
            android:title="@string/add_to_personal_dictionary"
            android:summary="@string/add_to_personal_dictionary_summary"
            android:defaultValue="false"
            android:persistent="true" />

    </PreferenceCategory>

</PreferenceScreen>
