<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014 The Android Open Source Project
    modified
    SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:latin="http://schemas.android.com/apk/res-auto"
      android:title="@string/settings_screen_preferences">

    <PreferenceCategory android:title="@string/settings_category_input">

        <SwitchPreferenceCompat
            android:key="pref_show_hints"
            android:title="@string/show_hints"
            android:summary="@string/show_hints_summary"
            android:defaultValue="true"
            android:persistent="true" />

        <SwitchPreferenceCompat
            android:key="pref_show_popup_hints"
            android:title="@string/show_popup_hints"
            android:summary="@string/show_popup_hints_summary"
            android:defaultValue="false"
            android:persistent="true" />

        <SwitchPreferenceCompat
            android:key="vibrate_on"
            android:title="@string/vibrate_on_keypress"
            android:defaultValue="@bool/config_default_vibration_enabled"
            android:persistent="true" />

        <org.dslul.openboard.inputmethod.latin.settings.SeekBarDialogPreference
            android:key="pref_vibration_duration_settings"
            android:title="@string/prefs_keypress_vibration_duration_settings"
            latin:maxValue="@integer/config_max_vibration_duration" />

        <SwitchPreferenceCompat
            android:key="sound_on"
            android:title="@string/sound_on_keypress"
            android:defaultValue="@bool/config_default_sound_enabled"
            android:persistent="true" />

        <org.dslul.openboard.inputmethod.latin.settings.SeekBarDialogPreference
            android:key="pref_keypress_sound_volume"
            android:title="@string/prefs_keypress_sound_volume_settings"
            latin:maxValue="100" /> <!-- percent -->

    </PreferenceCategory>

    <SwitchPreferenceCompat
        android:key="popup_on"
        android:title="@string/popup_on_keypress"
        android:defaultValue="@bool/config_default_key_preview_popup"
        android:persistent="true" />

    <PreferenceCategory
        android:title="@string/settings_category_additional_keys">

        <SwitchPreferenceCompat
            android:key="pref_show_number_row"
            android:title="@string/number_row"
            android:summary="@string/number_row_summary"
            android:defaultValue="false"
            android:persistent="true" />

        <ListPreference
            android:key="pref_language_switch_key"
            android:title="@string/show_language_switch_key"
            android:entries="@array/language_switch_key_entries"
            android:entryValues="@array/language_switch_key_values"
            android:defaultValue="off"
            android:summary="%s"
            android:persistent="true" />

        <SwitchPreferenceCompat
            android:key="pref_show_emoji_key"
            android:title="@string/show_emoji_key"
            android:defaultValue="false"
            android:persistent="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_clipboard_history">

        <SwitchPreferenceCompat
            android:key="pref_enable_clipboard_history"
            android:title="@string/enable_clipboard_history"
            android:summary="@string/enable_clipboard_history_summary"
            android:defaultValue="true"
            android:persistent="true" />

        <org.dslul.openboard.inputmethod.latin.settings.SeekBarDialogPreference
            android:key="pref_clipboard_history_retention_time"
            android:title="@string/clipboard_history_retention_time"
            latin:maxValue="120" /> <!-- minutes -->

    </PreferenceCategory>

</PreferenceScreen>
