<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014 The Android Open Source Project
    modified
    SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:latin="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_screen_advanced"
    android:key="screen_advanced">

    <SwitchPreference
        android:key="always_incognito_mode"
        android:title="@string/incognito"
        android:summary="@string/prefs_force_incognito_mode_summary"
        android:defaultValue="false" />

    <helium314.keyboard.latin.settings.SeekBarDialogPreference
        android:key="key_longpress_timeout"
        android:title="@string/prefs_key_longpress_timeout_settings"
        latin:minValue="@integer/config_min_longpress_timeout"
        latin:maxValue="@integer/config_max_longpress_timeout"
        latin:stepValue="@integer/config_longpress_timeout_step" />

    <ListPreference
        android:defaultValue="move_cursor"
        android:entries="@array/horizontal_space_swipe_entries"
        android:entryValues="@array/horizontal_space_swipe_values"
        android:key="horizontal_space_swipe"
        android:persistent="true"
        android:summary="%s"
        android:title="@string/show_horizontal_space_swipe" />

    <ListPreference
        android:defaultValue="none"
        android:entries="@array/vertical_space_swipe_entries"
        android:entryValues="@array/vertical_space_swipe_values"
        android:key="vertical_space_swipe"
        android:persistent="true"
        android:summary="%s"
        android:title="@string/show_vertical_space_swipe" />

    <ListPreference
        android:defaultValue="medium"
        android:entries="@array/language_swipe_sensitivity_entries"
        android:entryValues="@array/language_swipe_sensitivity_values"
        android:key="language_swipe_sensitivity"
        android:persistent="true"
        android:summary="%s"
        android:title="@string/prefs_language_swipe_sensitivity" />

    <SwitchPreference
        android:key="delete_swipe"
        android:title="@string/delete_swipe"
        android:summary="@string/delete_swipe_summary"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="prefs_long_press_keyboard_to_change_lang"
        android:title="@string/prefs_long_press_keyboard_to_change_lang"
        android:summary="@string/prefs_long_press_keyboard_to_change_lang_summary"
        android:persistent="true"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="enable_emoji_alt_physical_key"
        android:title="@string/prefs_enable_emoji_alt_physical_key"
        android:summary="@string/prefs_enable_emoji_alt_physical_key_summary"
        android:defaultValue="true"
        android:persistent="true" />

    <SwitchPreference
        android:key="show_setup_wizard_icon"
        android:title="@string/show_setup_wizard_icon"
        android:summary="@string/show_setup_wizard_icon_summary"
        android:defaultValue="true"
        android:persistent="true" />

    <ListPreference
        android:key="more_popup_keys"
        android:title="@string/show_popup_keys_title"
        android:entries="@array/show_popup_keys_entries"
        android:entryValues="@array/show_popup_keys_values"
        android:defaultValue="normal"
        android:summary="%s"
        android:persistent="true" />

    <Preference
        android:key="backup_restore"
        android:title="@string/backup_restore_title" />

    <PreferenceScreen
            android:fragment="helium314.keyboard.latin.settings.DebugSettingsFragment"
            android:key="screen_debug"
            android:title="@string/debug_settings_title"
            android:defaultValue="false"
            android:persistent="true" />

    <PreferenceCategory
        android:title="@string/settings_category_experimental">

        <SwitchPreference
            android:key="url_detection"
            android:title="@string/url_detection_title"
            android:summary="@string/url_detection_summary"
            android:defaultValue="false" />

        <Preference
            android:key="custom_background_image"
            android:title="@string/customize_background_image" />

        <Preference
            android:key="custom_symbols_number_layouts"
            android:title="@string/customize_symbols_number_layouts"
            android:summary="@string/customize_symbols_number_layouts_summary" />

        <Preference
            android:key="load_gesture_library"
            android:title="@string/load_gesture_library"
            android:summary="@string/load_gesture_library_summary" />

    </PreferenceCategory>

</PreferenceScreen>
