<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014 The Android Open Source Project
    modified
    SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_screen_toolbar"
    android:key="screen_toolbar">

    <Preference
        android:key="toolbar_keys"
        android:title="@string/toolbar_keys" />

    <Preference
        android:key="pinned_toolbar_keys"
        android:title="@string/pinned_toolbar_keys" />

    <Preference
        android:key="clipboard_toolbar_keys"
        android:title="@string/clipboard_toolbar_keys" />

    <SwitchPreference
        android:key="quick_pin_toolbar_keys"
        android:title="@string/quick_pin_toolbar_keys"
        android:summary="@string/quick_pin_toolbar_keys_summary"
        android:defaultValue="false"
        android:persistent="true" />

    <SwitchPreference
        android:key="var_toolbar_direction"
        android:title="@string/var_toolbar_direction"
        android:summary="@string/var_toolbar_direction_summary"
        android:defaultValue="true"
        android:persistent="true" />

</PreferenceScreen>
