<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014 The Android Open Source Project
    modified
    SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_screen_about"
    android:key="@string/settings_screen_about">
    <Preference
        android:icon="@mipmap/ic_launcher"
        android:title="@string/english_ime_name"
        android:summary="@string/app_slogan"/>
    <Preference
        android:title="@string/version"
        android:summary="@string/version_text"
        android:key="pref_key_version" />
    <Preference android:title="@string/license"
        android:summary="@string/gnu_gpl">
        <intent android:action="android.intent.action.VIEW"
            android:data="https://github.com/Helium314/openboard/blob/master/LICENSE" />
    </Preference>
    <Preference android:title="@string/about_github_link">
        <intent android:action="android.intent.action.VIEW"
            android:data="https://github.com/Helium314/openboard" />
    </Preference>
</PreferenceScreen>
