<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014 The Android Open Source Project
    modified
    SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_screen_gesture"
    android:key="screen_gesture">
    <SwitchPreference
        android:key="gesture_input"
        android:title="@string/gesture_input"
        android:summary="@string/gesture_input_summary"
        android:defaultValue="true"
        android:persistent="true" />
    <SwitchPreference
        android:key="gesture_floating_preview_text"
        android:title="@string/gesture_floating_preview_text"
        android:summary="@string/gesture_floating_preview_text_summary"
        android:defaultValue="true"
        android:persistent="true" />
    <SwitchPreference
        android:key="gesture_preview_trail"
        android:title="@string/gesture_preview_trail"
        android:defaultValue="true"
        android:persistent="true" />
    <SwitchPreference
        android:key="gesture_space_aware"
        android:title="@string/gesture_space_aware"
        android:summary="@string/gesture_space_aware_summary"
        android:defaultValue="false"
        android:persistent="true" />
    <SwitchPreference
        android:key="gesture_always_start"
        android:title="@string/gesture_always_start"
        android:summary="@string/gesture_always_start_summary"
        android:defaultValue="false"
        android:persistent="true" />
</PreferenceScreen>
